--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "portclean": "cli.js"
   },
   "scripts": {
-    "test": "node --test test/*.test.js",
+    "test": "node --test test",
     "smoke": "node cli.js --help"
   },
   "keywords": [
